--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,23 @@ dependencies:
   isar_flutter_libs: ^3.0.5
   xml: ^6.2.2
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+  windows:
+    generate: true
+  macos:
+    generate: true
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.12.0"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
